@@ -20,18 +20,18 @@ public class UsuarioMapperApi {
         public static NovoUsuarioDTO toNovoUsuarioDTO(NovoUsuarioPayLoad payload, String senhaEncriptada) {
                 
                 List<Endereco> enderecos = payload.getEnderecos().stream()
-                                .map(dto -> new Endereco(
-                                                dto.getLogradouro(),
-                                                dto.getNumero(),
-                                                dto.getComplemento(),
-                                                dto.getBairro(),
-                                                dto.getPontoReferencia(),
-                                                dto.getCep(),
-                                                dto.getMunicipio(),
-                                                dto.getUf(),
-                                                dto.getPrincipal(),
-                                                null))
-                                .toList();
+                                .map(dto -> Endereco.builder()
+                                                .logradouro(dto.getLogradouro())
+                                                .numero(dto.getNumero())
+                                                .complemento(dto.getComplemento())
+                                                .bairro(dto.getBairro())
+                                                .pontoReferencia(dto.getPontoReferencia())
+                                                .cep(dto.getCep())
+                                                .municipio(dto.getMunicipio())
+                                                .uf(dto.getUf())
+                                                .principal(dto.getPrincipal())
+                                                .build())
+                                .collect(Collectors.toList());
 
                 return new NovoUsuarioDTO(
                                 payload.getNome(),
@@ -44,24 +44,18 @@ public class UsuarioMapperApi {
         public static AtualizaUsuarioDTO toAtualizaUsuarioDTO(AtualizaUsuarioPayLoad payload) {
                 
                 List<Endereco> enderecos = payload.getEnderecos().stream()
-                                .map(dto -> {
-                                        try {
-                                                return new Endereco(
-                                                                dto.getLogradouro(),
-                                                                dto.getNumero(),
-                                                                dto.getComplemento(),
-                                                                dto.getBairro(),
-                                                                dto.getPontoReferencia(),
-                                                                dto.getCep(),
-                                                                dto.getMunicipio(),
-                                                                dto.getUf(),
-                                                                dto.getPrincipal() != null ? dto.getPrincipal() : false,
-                                                                null);
-                                        } catch (IllegalArgumentException e) {
-                                                throw new IllegalArgumentException("Erro ao validar endereço: " + e.getMessage(), e);
-                                        }
-                                })
-                                .toList();
+                                .map(dto -> Endereco.builder()
+                                                .logradouro(dto.getLogradouro())
+                                                .numero(dto.getNumero())
+                                                .complemento(dto.getComplemento())
+                                                .bairro(dto.getBairro())
+                                                .pontoReferencia(dto.getPontoReferencia())
+                                                .cep(dto.getCep())
+                                                .municipio(dto.getMunicipio())
+                                                .uf(dto.getUf())
+                                                .principal(dto.getPrincipal() != null ? dto.getPrincipal() : false)
+                                                .build())
+                                .collect(Collectors.toList());
 
                 return new AtualizaUsuarioDTO(
                                 payload.getNome(),
